--- a/css/components/layout.css
+++ b/css/components/layout.css
@@ -118,8 +118,8 @@ header {
     }
 
     .content-wrapper {
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-left: 5px;
+        padding-right: 5px;
     }
 
     header {
@@ -136,13 +136,13 @@ header {
 
     .container {
         margin: 10px auto;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-left: 5px;
+        padding-right: 5px;
     }
 
     .section {
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-left: 5px;
+        padding-right: 5px;
     }
 
     .logo {
